@@ -8,254 +8,254 @@ MonMenuIconPals:
 	icon_pals GREEN, GREEN ; BULBASAUR
 	icon_pals GREEN, GREEN ; IVYSAUR
 	icon_pals GREEN, GREEN ; VENUSAUR
-	icon_pals RED, BROWN ; CHARMANDER
-	icon_pals RED, PINK ; CHARMELEON
-	icon_pals RED, PINK ; CHARIZARD
-	icon_pals BLUE, GREEN ; SQUIRTLE
-	icon_pals BLUE, GREEN ; WARTORTLE
-	icon_pals BLUE, GREEN ; BLASTOISE
+	icon_pals RED, BROWN   ; CHARMANDER
+	icon_pals RED, PINK    ; CHARMELEON
+	icon_pals RED, BLUE    ; CHARIZARD
+	icon_pals BLUE, GREEN  ; SQUIRTLE
+	icon_pals BLUE, GREEN  ; WARTORTLE
+	icon_pals BLUE, GREEN  ; BLASTOISE
 	icon_pals GREEN, BROWN ; CATERPIE
 	icon_pals GREEN, BROWN ; METAPOD
-	icon_pals PINK, GREEN ; BUTTERFREE
-	icon_pals RED, PINK ; WEEDLE
+	icon_pals PINK, GREEN  ; BUTTERFREE
+	icon_pals RED, PINK    ; WEEDLE
 	icon_pals BROWN, GREEN ; KAKUNA
-	icon_pals RED, GREEN ; BEEDRILL
+	icon_pals RED, GREEN   ; BEEDRILL
 	icon_pals BROWN, GREEN ; PIDGEY
 	icon_pals BROWN, GREEN ; PIDGEOTTO
 	icon_pals BROWN, GREEN ; PIDGEOT
-	icon_pals PINK, GREEN ; RATTATA
-	icon_pals BROWN, GREEN ; RATICATE
+	icon_pals PINK, GREEN  ; RATTATA
+	icon_pals BROWN, RED   ; RATICATE
 	icon_pals BROWN, GREEN ; SPEAROW
 	icon_pals BROWN, GREEN ; FEAROW
-	icon_pals PINK, BROWN ; EKANS
-	icon_pals PINK, BROWN ; ARBOK
-	icon_pals RED, PINK ; PIKACHU
-	icon_pals RED, BROWN ; RAICHU
+	icon_pals PINK, GREEN  ; EKANS
+	icon_pals PINK, BROWN  ; ARBOK
+	icon_pals RED, PINK    ; PIKACHU
+	icon_pals RED, BROWN   ; RAICHU
 	icon_pals BROWN, GREEN ; SANDSHREW
-	icon_pals BROWN, RED ; SANDSLASH
-	icon_pals BLUE, PINK ; NIDORAN_F
-	icon_pals BLUE, PINK ; NIDORINA
-	icon_pals BLUE, GREEN ; NIDOQUEEN
-	icon_pals PINK, BLUE ; NIDORAN_M
-	icon_pals PINK, BLUE ; NIDORINO
-	icon_pals PINK, BLUE ; NIDOKING
-	icon_pals PINK, GREEN ; CLEFAIRY
-	icon_pals PINK, GREEN ; CLEFABLE
-	icon_pals RED, BROWN ; VULPIX
-	icon_pals BROWN, BLUE ; NINETALES
-	icon_pals PINK, GREEN ; JIGGLYPUFF
-	icon_pals PINK, GREEN ; WIGGLYTUFF
-	icon_pals BLUE, GREEN ; ZUBAT
-	icon_pals BLUE, GREEN ; GOLBAT
+	icon_pals BROWN, RED   ; SANDSLASH
+	icon_pals BLUE, PINK   ; NIDORAN_F
+	icon_pals BLUE, PINK   ; NIDORINA
+	icon_pals BLUE, GREEN  ; NIDOQUEEN
+	icon_pals PINK, BLUE   ; NIDORAN_M
+	icon_pals PINK, BLUE   ; NIDORINO
+	icon_pals PINK, BLUE   ; NIDOKING
+	icon_pals PINK, GREEN  ; CLEFAIRY
+	icon_pals PINK, GREEN  ; CLEFABLE
+	icon_pals RED, BROWN   ; VULPIX
+	icon_pals BROWN, BLUE  ; NINETALES
+	icon_pals PINK, GREEN  ; JIGGLYPUFF
+	icon_pals PINK, GREEN  ; WIGGLYTUFF
+	icon_pals BLUE, GREEN  ; ZUBAT
+	icon_pals BLUE, GREEN  ; GOLBAT
 	icon_pals GREEN, BROWN ; ODDISH
-	icon_pals RED, BROWN ; GLOOM
-	icon_pals RED, BROWN ; VILEPLUME
-	icon_pals RED, GREEN ; PARAS
-	icon_pals RED, GREEN ; PARASECT
-	icon_pals PINK, BLUE ; VENONAT
-	icon_pals PINK, BLUE ; VENOMOTH
-	icon_pals BROWN, BLUE ; DIGLETT
-	icon_pals BROWN, BLUE ; DUGTRIO
-	icon_pals BROWN, PINK ; MEOWTH
-	icon_pals BROWN, PINK ; PERSIAN
-	icon_pals BROWN, BLUE ; PSYDUCK
-	icon_pals BLUE, BLUE ; GOLDUCK
+	icon_pals RED, BROWN   ; GLOOM
+	icon_pals RED, BROWN   ; VILEPLUME
+	icon_pals RED, GREEN   ; PARAS
+	icon_pals RED, GREEN   ; PARASECT
+	icon_pals PINK, BLUE   ; VENONAT
+	icon_pals PINK, BLUE   ; VENOMOTH
+	icon_pals BROWN, BLUE  ; DIGLETT
+	icon_pals BROWN, BLUE  ; DUGTRIO
+	icon_pals BROWN, PINK  ; MEOWTH
+	icon_pals BROWN, PINK  ; PERSIAN
+	icon_pals BROWN, BLUE  ; PSYDUCK
+	icon_pals BLUE, BLUE   ; GOLDUCK
 	icon_pals BROWN, GREEN ; MANKEY
 	icon_pals BROWN, GREEN ; PRIMEAPE
-	icon_pals RED, GREEN ; GROWLITHE
-	icon_pals RED, GREEN ; ARCANINE
-	icon_pals BLUE, BLUE ; POLIWAG
-	icon_pals BLUE, BLUE ; POLIWHIRL
-	icon_pals BLUE, GREEN ; POLIWRATH
-	icon_pals BROWN, PINK ; ABRA
-	icon_pals BROWN, BLUE ; KADABRA
-	icon_pals BROWN, GREEN ; ALAKAZAM
-	icon_pals BLUE, GREEN ; MACHOP
-	icon_pals BLUE, GREEN ; MACHOKE
-	icon_pals BLUE, GREEN ; MACHAMP
+	icon_pals RED, GREEN   ; GROWLITHE
+	icon_pals RED, GREEN   ; ARCANINE
+	icon_pals BLUE, BLUE   ; POLIWAG
+	icon_pals BLUE, BLUE   ; POLIWHIRL
+	icon_pals BLUE, GREEN  ; POLIWRATH
+	icon_pals BROWN, PINK  ; ABRA
+	icon_pals BROWN, PINK  ; KADABRA
+	icon_pals BROWN, PINK  ; ALAKAZAM
+	icon_pals BLUE, BROWN  ; MACHOP
+	icon_pals BLUE, GREEN  ; MACHOKE
+	icon_pals BLUE, GREEN  ; MACHAMP
 	icon_pals GREEN, BROWN ; BELLSPROUT
 	icon_pals GREEN, BROWN ; WEEPINBELL
 	icon_pals GREEN, BROWN ; VICTREEBEL
-	icon_pals BLUE, GREEN ; TENTACOOL
-	icon_pals BLUE, GREEN ; TENTACRUEL
-	icon_pals BROWN, RED ; GEODUDE
-	icon_pals BROWN, RED ; GRAVELER
-	icon_pals BROWN, RED ; GOLEM
-	icon_pals RED, PINK ; PONYTA
-	icon_pals RED, PINK ; RAPIDASH
-	icon_pals PINK, BLUE ; SLOWPOKE
-	icon_pals PINK, BLUE ; SLOWBRO
-	icon_pals BLUE, BROWN ; MAGNEMITE
-	icon_pals BLUE, BROWN ; MAGNETON
+	icon_pals BLUE, GREEN  ; TENTACOOL
+	icon_pals BLUE, GREEN  ; TENTACRUEL
+	icon_pals BROWN, RED   ; GEODUDE
+	icon_pals BROWN, RED   ; GRAVELER
+	icon_pals BROWN, RED   ; GOLEM
+	icon_pals RED, PINK    ; PONYTA
+	icon_pals RED, PINK    ; RAPIDASH
+	icon_pals PINK, BLUE   ; SLOWPOKE
+	icon_pals PINK, BLUE   ; SLOWBRO
+	icon_pals BLUE, BROWN  ; MAGNEMITE
+	icon_pals BLUE, BROWN  ; MAGNETON
 	icon_pals BROWN, GREEN ; FARFETCH_D
 	icon_pals BROWN, GREEN ; DODUO
 	icon_pals BROWN, GREEN ; DODRIO
-	icon_pals RED, PINK ; SEEL
-	icon_pals RED, PINK ; DEWGONG
-	icon_pals PINK, GREEN ; GRIMER
-	icon_pals PINK, GREEN ; MUK
-	icon_pals PINK, BROWN ; SHELLDER
-	icon_pals PINK, BLUE ; CLOYSTER
-	icon_pals PINK, BLUE ; GASTLY
-	icon_pals PINK, BLUE ; HAUNTER
-	icon_pals PINK, BLUE ; GENGAR
+	icon_pals RED, PINK    ; SEEL
+	icon_pals RED, PINK    ; DEWGONG
+	icon_pals PINK, GREEN  ; GRIMER
+	icon_pals PINK, GREEN  ; MUK
+	icon_pals PINK, BROWN  ; SHELLDER
+	icon_pals PINK, BLUE   ; CLOYSTER
+	icon_pals PINK, BLUE   ; GASTLY
+	icon_pals PINK, BLUE   ; HAUNTER
+	icon_pals PINK, BLUE   ; GENGAR
 	icon_pals BROWN, GREEN ; ONIX
-	icon_pals BROWN, PINK ; DROWZEE
-	icon_pals BROWN, PINK ; HYPNO
-	icon_pals RED, GREEN ; KRABBY
-	icon_pals RED, GREEN ; KINGLER
-	icon_pals RED, BLUE ; VOLTORB
-	icon_pals RED, BLUE ; ELECTRODE
-	icon_pals PINK, GREEN ; EXEGGCUTE
+	icon_pals BROWN, PINK  ; DROWZEE
+	icon_pals BROWN, PINK  ; HYPNO
+	icon_pals RED, GREEN   ; KRABBY
+	icon_pals RED, GREEN   ; KINGLER
+	icon_pals RED, BLUE    ; VOLTORB
+	icon_pals RED, BLUE    ; ELECTRODE
+	icon_pals PINK, GREEN  ; EXEGGCUTE
 	icon_pals GREEN, BROWN ; EXEGGUTOR
 	icon_pals BROWN, GREEN ; CUBONE
 	icon_pals BROWN, GREEN ; MAROWAK
 	icon_pals BROWN, GREEN ; HITMONLEE
-	icon_pals BROWN, BLUE ; HITMONCHAN
-	icon_pals PINK, GREEN ; LICKITUNG
-	icon_pals PINK, BLUE ; KOFFING
-	icon_pals PINK, BLUE ; WEEZING
-	icon_pals BROWN, RED ; RHYHORN
-	icon_pals BROWN, BLUE ; RHYDON
-	icon_pals PINK, GREEN ; CHANSEY
-	icon_pals BLUE, GREEN ; TANGELA
+	icon_pals BROWN, GREEN ; HITMONCHAN
+	icon_pals PINK, GREEN  ; LICKITUNG
+	icon_pals PINK, BLUE   ; KOFFING
+	icon_pals PINK, BLUE   ; WEEZING
+	icon_pals BLUE, BROWN  ; RHYHORN
+	icon_pals BLUE, BLUE   ; RHYDON
+	icon_pals PINK, GREEN  ; CHANSEY
+	icon_pals BLUE, GREEN  ; TANGELA
 	icon_pals BROWN, GREEN ; KANGASKHAN
-	icon_pals BLUE, PINK ; HORSEA
-	icon_pals BLUE, PINK ; SEADRA
-	icon_pals RED, BROWN ; GOLDEEN
-	icon_pals RED, BROWN ; SEAKING
-	icon_pals BROWN, BLUE ; STARYU
-	icon_pals PINK, BLUE ; STARMIE
-	icon_pals PINK, GREEN ; MR__MIME
-	icon_pals GREEN, RED ; SCYTHER
-	icon_pals RED, PINK ; JYNX
+	icon_pals BLUE, PINK   ; HORSEA
+	icon_pals BLUE, PINK   ; SEADRA
+	icon_pals RED, BROWN   ; GOLDEEN
+	icon_pals RED, BROWN   ; SEAKING
+	icon_pals BROWN, BLUE  ; STARYU
+	icon_pals PINK, BLUE   ; STARMIE
+	icon_pals PINK, GREEN  ; MR__MIME
+	icon_pals GREEN, GREEN ; SCYTHER
+	icon_pals RED, PINK    ; JYNX
 	icon_pals BROWN, GREEN ; ELECTABUZZ
-	icon_pals RED, PINK ; MAGMAR
-	icon_pals BROWN, BLUE ; PINSIR
+	icon_pals RED, PINK    ; MAGMAR
+	icon_pals BROWN, BLUE  ; PINSIR
 	icon_pals BROWN, GREEN ; TAUROS
-	icon_pals RED, GREEN ; MAGIKARP
-	icon_pals BLUE, RED ; GYARADOS
-	icon_pals BLUE, PINK ; LAPRAS
-	icon_pals PINK, BLUE ; DITTO
-	icon_pals BROWN, BLUE ; EEVEE
-	icon_pals BLUE, PINK ; VAPOREON
+	icon_pals RED, GREEN   ; MAGIKARP
+	icon_pals BLUE, RED    ; GYARADOS
+	icon_pals BLUE, PINK   ; LAPRAS
+	icon_pals PINK, BLUE   ; DITTO
+	icon_pals BROWN, BLUE  ; EEVEE
+	icon_pals BLUE, PINK   ; VAPOREON
 	icon_pals BROWN, GREEN ; JOLTEON
-	icon_pals RED, BROWN ; FLAREON
-	icon_pals PINK, BLUE ; PORYGON
-	icon_pals BLUE, BROWN ; OMANYTE
-	icon_pals BLUE, BROWN ; OMASTAR
+	icon_pals RED, BROWN   ; FLAREON
+	icon_pals PINK, BLUE   ; PORYGON
+	icon_pals BLUE, BROWN  ; OMANYTE
+	icon_pals BLUE, BROWN  ; OMASTAR
 	icon_pals BROWN, GREEN ; KABUTO
 	icon_pals BROWN, GREEN ; KABUTOPS
-	icon_pals PINK, BLUE ; AERODACTYL
-	icon_pals RED, BLUE ; SNORLAX
-	icon_pals BLUE, BLUE ; ARTICUNO
-	icon_pals BROWN, RED ; ZAPDOS
-	icon_pals RED, PINK ; MOLTRES
-	icon_pals BLUE, BLUE ; DRATINI
-	icon_pals BLUE, BLUE ; DRAGONAIR
-	icon_pals RED, GREEN ; DRAGONITE
-	icon_pals PINK, GREEN ; MEWTWO
-	icon_pals PINK, BLUE ; MEW
+	icon_pals PINK, BLUE   ; AERODACTYL
+	icon_pals RED, BLUE    ; SNORLAX
+	icon_pals BLUE, BLUE   ; ARTICUNO
+	icon_pals BROWN, RED   ; ZAPDOS
+	icon_pals RED, PINK    ; MOLTRES
+	icon_pals BLUE, PINK   ; DRATINI
+	icon_pals BLUE, PINK   ; DRAGONAIR
+	icon_pals RED, GREEN   ; DRAGONITE
+	icon_pals PINK, GREEN  ; MEWTWO
+	icon_pals PINK, BLUE   ; MEW
 	icon_pals GREEN, BROWN ; CHIKORITA
 	icon_pals GREEN, BROWN ; BAYLEEF
 	icon_pals GREEN, BROWN ; MEGANIUM
-	icon_pals RED, PINK ; CYNDAQUIL
-	icon_pals RED, PINK ; QUILAVA
-	icon_pals RED, PINK ; TYPHLOSION
-	icon_pals BLUE, GREEN ; TOTODILE
-	icon_pals BLUE, GREEN ; CROCONAW
-	icon_pals BLUE, GREEN ; FERALIGATR
-	icon_pals BROWN, PINK ; SENTRET
-	icon_pals BROWN, PINK ; FURRET
+	icon_pals RED, PINK    ; CYNDAQUIL
+	icon_pals RED, PINK    ; QUILAVA
+	icon_pals RED, PINK    ; TYPHLOSION
+	icon_pals BLUE, GREEN  ; TOTODILE
+	icon_pals BLUE, GREEN  ; CROCONAW
+	icon_pals BLUE, GREEN  ; FERALIGATR
+	icon_pals BROWN, PINK  ; SENTRET
+	icon_pals BROWN, PINK  ; FURRET
 	icon_pals BROWN, GREEN ; HOOTHOOT
 	icon_pals BROWN, GREEN ; NOCTOWL
-	icon_pals RED, BROWN, ; LEDYBA
-	icon_pals RED, BROWN, ; LEDIAN
-	icon_pals GREEN, PINK ; SPINARAK
-	icon_pals RED, PINK ; ARIADOS
-	icon_pals PINK, PINK ; CROBAT
-	icon_pals BLUE, BLUE ; CHINCHOU
-	icon_pals BLUE, PINK ; LANTURN
-	icon_pals RED, BROWN ; PICHU
-	icon_pals PINK, GREEN ; CLEFFA
-	icon_pals PINK, GREEN ; IGGLYBUFF
-	icon_pals RED, BLUE ; TOGEPI
-	icon_pals RED, BLUE ; TOGETIC
+	icon_pals RED, BROWN   ; LEDYBA
+	icon_pals RED, BROWN   ; LEDIAN
+	icon_pals GREEN, PINK  ; SPINARAK
+	icon_pals RED, PINK    ; ARIADOS
+	icon_pals PINK, PINK   ; CROBAT
+	icon_pals BLUE, BLUE   ; CHINCHOU
+	icon_pals BLUE, PINK   ; LANTURN
+	icon_pals RED, BROWN   ; PICHU
+	icon_pals PINK, GREEN  ; CLEFFA
+	icon_pals PINK, GREEN  ; IGGLYBUFF
+	icon_pals RED, BLUE    ; TOGEPI
+	icon_pals RED, BLUE    ; TOGETIC
 	icon_pals GREEN, GREEN ; NATU
 	icon_pals GREEN, GREEN ; XATU
-	icon_pals BLUE, BLUE ; MAREEP
-	icon_pals PINK, PINK ; FLAAFFY
-	icon_pals BROWN, BLUE ; AMPHAROS
-	icon_pals GREEN, BLUE ; BELLOSSOM
-	icon_pals BLUE, GREEN ; MARILL
-	icon_pals BLUE, BROWN ; AZUMARILL
-	icon_pals GREEN, PINK ; SUDOWOODO
-	icon_pals GREEN, BLUE ; POLITOED
-	icon_pals PINK, GREEN ; HOPPIP
-	icon_pals GREEN, PINK ; SKIPLOOM
-	icon_pals BLUE, PINK ; JUMPLUFF
-	icon_pals PINK, PINK ; AIPOM
+	icon_pals BLUE, BLUE   ; MAREEP
+	icon_pals PINK, PINK   ; FLAAFFY
+	icon_pals BROWN, BLUE  ; AMPHAROS
+	icon_pals GREEN, BLUE  ; BELLOSSOM
+	icon_pals BLUE, GREEN  ; MARILL
+	icon_pals BLUE, BROWN  ; AZUMARILL
+	icon_pals GREEN, PINK  ; SUDOWOODO
+	icon_pals GREEN, BLUE  ; POLITOED
+	icon_pals PINK, GREEN  ; HOPPIP
+	icon_pals GREEN, PINK  ; SKIPLOOM
+	icon_pals BLUE, PINK   ; JUMPLUFF
+	icon_pals PINK, PINK   ; AIPOM
 	icon_pals GREEN, BROWN ; SUNKERN
 	icon_pals GREEN, BROWN ; SUNFLORA
-	icon_pals RED, BLUE ; YANMA
-	icon_pals BLUE, PINK ; WOOPER
-	icon_pals BLUE, PINK ; QUAGSIRE
-	icon_pals PINK, GREEN ; ESPEON
-	icon_pals BROWN, BLUE ; UMBREON
-	icon_pals BLUE, PINK ; MURKROW
-	icon_pals PINK, BLUE ; SLOWKING
-	icon_pals BLUE, BROWN ; MISDREAVUS
-	icon_pals BROWN, BLUE ; UNOWN
-	icon_pals BLUE, PINK ; WOBBUFFET
-	icon_pals PINK, BLUE ; GIRAFARIG
-	icon_pals GREEN, RED ; PINECO
-	icon_pals RED, GREEN ; FORRETRESS
-	icon_pals BLUE, PINK ; DUNSPARCE
-	icon_pals PINK, BLUE ; GLIGAR
-	icon_pals BLUE, BROWN ; STEELIX
-	icon_pals PINK, BLUE ; SNUBBULL
-	icon_pals PINK, BLUE ; GRANBULL
-	icon_pals BLUE, PINK ; QWILFISH
-	icon_pals RED, GREEN ; SCIZOR
-	icon_pals RED, BLUE ; SHUCKLE
-	icon_pals BLUE, PINK ; HERACROSS
-	icon_pals BLUE, PINK ; SNEASEL
+	icon_pals RED, BLUE    ; YANMA
+	icon_pals BLUE, PINK   ; WOOPER
+	icon_pals BLUE, PINK   ; QUAGSIRE
+	icon_pals PINK, GREEN  ; ESPEON
+	icon_pals BROWN, BLUE  ; UMBREON
+	icon_pals BLUE, PINK   ; MURKROW
+	icon_pals PINK, BLUE   ; SLOWKING
+	icon_pals BLUE, BROWN  ; MISDREAVUS
+	icon_pals BROWN, BLUE  ; UNOWN
+	icon_pals BLUE, PINK   ; WOBBUFFET
+	icon_pals PINK, BLUE   ; GIRAFARIG
+	icon_pals GREEN, RED   ; PINECO
+	icon_pals RED, GREEN   ; FORRETRESS
+	icon_pals BLUE, PINK   ; DUNSPARCE
+	icon_pals PINK, BLUE   ; GLIGAR
+	icon_pals BLUE, BROWN  ; STEELIX
+	icon_pals PINK, BLUE   ; SNUBBULL
+	icon_pals PINK, BLUE   ; GRANBULL
+	icon_pals BLUE, PINK   ; QWILFISH
+	icon_pals RED, GREEN   ; SCIZOR
+	icon_pals RED, BLUE    ; SHUCKLE
+	icon_pals BLUE, PINK   ; HERACROSS
+	icon_pals BLUE, PINK   ; SNEASEL
 	icon_pals BROWN, GREEN ; TEDDIURSA
 	icon_pals BROWN, GREEN ; URSARING
-	icon_pals RED, BLUE ; SLUGMA
-	icon_pals RED, BLUE ; MAGCARGO
-	icon_pals BROWN, BLUE ; SWINUB
+	icon_pals RED, BLUE    ; SLUGMA
+	icon_pals RED, BLUE    ; MAGCARGO
+	icon_pals BROWN, BLUE  ; SWINUB
 	icon_pals BROWN, GREEN ; PILOSWINE
-	icon_pals PINK, BLUE ; CORSOLA
-	icon_pals BLUE, BLUE ; REMORAID
-	icon_pals RED, GREEN ; OCTILLERY
-	icon_pals RED, PINK ; DELIBIRD
-	icon_pals BLUE, BLUE ; MANTINE
-	icon_pals RED, GREEN ; SKARMORY
-	icon_pals RED, BLUE ; HOUNDOUR
-	icon_pals RED, BLUE ; HOUNDOOM
-	icon_pals BLUE, PINK ; KINGDRA
-	icon_pals BLUE, BLUE ; PHANPY
-	icon_pals BLUE, RED ; DONPHAN
-	icon_pals PINK, BLUE ; PORYGON2
+	icon_pals PINK, BLUE   ; CORSOLA
+	icon_pals BLUE, BLUE   ; REMORAID
+	icon_pals RED, GREEN   ; OCTILLERY
+	icon_pals RED, PINK    ; DELIBIRD
+	icon_pals BLUE, BLUE   ; MANTINE
+	icon_pals RED, GREEN   ; SKARMORY
+	icon_pals RED, BLUE    ; HOUNDOUR
+	icon_pals RED, BLUE    ; HOUNDOOM
+	icon_pals BLUE, PINK   ; KINGDRA
+	icon_pals BLUE, BLUE   ; PHANPY
+	icon_pals BLUE, RED    ; DONPHAN
+	icon_pals PINK, BLUE   ; PORYGON2
 	icon_pals BROWN, GREEN ; STANTLER
-	icon_pals GREEN, PINK ; SMEARGLE
-	icon_pals PINK, BLUE ; TYROGUE
-	icon_pals BROWN, BLUE ; HITMONTOP
-	icon_pals PINK, PINK ; SMOOCHUM
+	icon_pals GREEN, PINK  ; SMEARGLE
+	icon_pals PINK, BLUE   ; TYROGUE
+	icon_pals BROWN, BLUE  ; HITMONTOP
+	icon_pals PINK, PINK   ; SMOOCHUM
 	icon_pals BROWN, BROWN ; ELEKID
-	icon_pals RED, BROWN ; MAGBY
-	icon_pals PINK, BLUE ; MILTANK
-	icon_pals PINK, PINK ; BLISSEY
+	icon_pals RED, BROWN   ; MAGBY
+	icon_pals PINK, BLUE   ; MILTANK
+	icon_pals PINK, PINK   ; BLISSEY
 	icon_pals BROWN, BROWN ; RAIKOU
-	icon_pals RED, RED ; ENTEI
-	icon_pals BLUE, BLUE ; SUICUNE
+	icon_pals RED, RED     ; ENTEI
+	icon_pals BLUE, BLUE   ; SUICUNE
 	icon_pals GREEN, GREEN ; LARVITAR
-	icon_pals BLUE, PINK ; PUPITAR
-	icon_pals GREEN, PINK ; TYRANITAR
-	icon_pals BLUE,   PINK   ; LUGIA
-	icon_pals RED,    BROWN  ; HO_OH
-	icon_pals GREEN,  PINK   ; CELEBI
+	icon_pals BLUE, PINK   ; PUPITAR
+	icon_pals GREEN, PINK  ; TYRANITAR
+	icon_pals BLUE, PINK   ; LUGIA
+	icon_pals RED, BROWN   ; HO_OH
+	icon_pals GREEN, PINK  ; CELEBI
 	assert_table_length NUM_POKEMON
 
 	icon_pals RED,    RED    ; 252
