@@ -1,4 +1,3 @@
 
-	RGB 24, 14, 14
 	RGB 12, 20, 01
-
+	RGB 24, 14, 14
